# AvitoParser

./: AvitoParser.sln  CMakeLists.txt  README.md  build.bat
AvitoParser/: AvitoParser.cpp  AvitoParser.h  AvitoParser.qrc  AvitoParser.ui  AvitoParser.vcxproj  AvitoParser.vcxproj.filters  BUFFER.txt  BUFFERIPhone.txt  BUFFERPS.txt  BUFFERPS5.txt  BUFFER_PS.txt  BUFFER_iPhone.txt  BUFFER_Штампы.txt  BUFFERигры playstation 5.txt  TelegramJacket.cpp  TelegramJacket.h  main.cpp  resource.h  tree.txt  uniqueParseObject.cpp  uniqueParseObject.h
